[SONAR] cleanup